force-app/main/default/objects/Extole_Report_Snapshot__c/Extole_Report_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Extole Report Snapshot</label>
    <nameField>
        <label>Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extole Report Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>