force-app/main/default/objects/Extole_Report_Snapshot__c/fields/As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>As_Of_Date__c</fullName>
    <label>As Of Date</label>
    <type>DateTime</type>
</CustomField>