force-app/main/default/objects/Extole_Report_Snapshot__c/fields/Chart_Type__c.field-meta.xml
<CustomField>
    <fullName>Chart_Type__c</fullName>
    <label>Chart Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>