force-app/main/default/objects/Extole_Report_Snapshot__c/fields/Config_Id__c.field-meta.xml
<CustomField>
    <fullName>Config_Id__c</fullName>
    <label>Config Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>