force-app/main/default/objects/Extole_Report_Snapshot__c/fields/Config_Status__c.field-meta.xml
<CustomField>
    <fullName>Config_Status__c</fullName>
    <label>Config Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
                <default>true</default>
                <label>ACTIVE</label>
            </value>
            <value>
                <fullName>ORPHANED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>