force-app/main/default/objects/Extole_Report_Snapshot__c/fields/Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Date_Range__c</fullName>
    <label>Date Range</label>
    <type>Text</type>
    <length>50</length>
</CustomField>