force-app/main/default/objects/Extole_Report_Snapshot__c/fields/Executor_Type__c.field-meta.xml
<CustomField>
    <fullName>Executor_Type__c</fullName>
    <label>Executor Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>