force-app/main/default/objects/Extole_Report_Snapshot__c/fields/Next_Expected_Sync__c.field-meta.xml
<CustomField>
    <fullName>Next_Expected_Sync__c</fullName>
    <label>Next Expected Sync</label>
    <type>DateTime</type>
</CustomField>