force-app/main/default/objects/Extole_Report_Snapshot__c/fields/Prior_Period_Value__c.field-meta.xml
<CustomField>
    <fullName>Prior_Period_Value__c</fullName>
    <label>Prior Period Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>