force-app/main/default/objects/Extole_Report_Snapshot__c/fields/Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Report_Id__c</fullName>
    <label>Report Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>