force-app/main/default/objects/Extole_Report_Snapshot__c/fields/Schedule_URL__c.field-meta.xml
<CustomField>
    <fullName>Schedule_URL__c</fullName>
    <label>Schedule URL</label>
    <description>Link to the scheduled runner in Extole (my.extole.com/reports#/schedules/{runnerId}).</description>
    <type>Url</type>
</CustomField>