force-app/main/default/objects/Extole_Report_Snapshot__c/fields/Time_Series_JSON__c.field-meta.xml
<CustomField>
    <fullName>Time_Series_JSON__c</fullName>
    <label>Time Series JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>