force-app/main/default/objects/Extole_Report_Snapshot__c/fields/View_URL__c.field-meta.xml
<CustomField>
    <fullName>View_URL__c</fullName>
    <label>View URL</label>
    <type>Url</type>
</CustomField>